--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
+server.port=7200
 
+sp.redis.host=localhost
+sp.redis.port=6379
+sp.redis-session-ttl-secs=60
+
+sp.mongo.url=mongodb://localhost:27017
+sp.mongo.dbName=skillspro
