--- a/pom.xml
+++ b/pom.xml
@@ -85,6 +85,12 @@
 			<artifactId>junit-jupiter</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-test</artifactId>
+<!--			<version>5.0.5.RELEASE</version>-->
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
