--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,12 @@
 server.port=7200
 #logging.level.org.springframework.security=debug
+logging.level.me.skillspro=debug
 
 sp.redis.host=localhost
 sp.redis.port=6379
 sp.redis-session-ttl-secs=60
+sp.redis-token-ttl-secs=300
+sp.email-verification-topic=mail.verification
 
 sp.mongo.url=mongodb://localhost:27017
 sp.mongo.dbName=skillspro
