--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,14 @@ sp.redis.host=localhost
 sp.redis.port=6379
 sp.redis-session-ttl-secs=60
 sp.redis-token-ttl-secs=300
-sp.email-verification-topic=mail.verification
+sp.email-verification-subject=Welcome to Skillspro
 
 sp.mongo.url=mongodb://localhost:27017
 sp.mongo.dbName=skillspro
+
+spring.mail.host=smtp.elasticemail.com
+spring.mail.port=2525
+spring.mail.username=dubisoft.tech@gmail.com
+spring.mail.password=A800233F495E4E28E3B7DDC1FEDBAE46CDCC
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
