--- a/pom.xml
+++ b/pom.xml
@@ -65,12 +65,11 @@
 			<artifactId>commons-text</artifactId>
 			<version>1.11.0</version>
 		</dependency>
-
-		<!--		<dependency>-->
-<!--			<groupId>org.apache.commons</groupId>-->
-<!--			<artifactId>commons-lang3</artifactId>-->
-<!--			<version>3.12.0</version>-->
-<!--		</dependency>-->
+		<dependency>
+			<groupId>com.google.firebase</groupId>
+			<artifactId>firebase-admin</artifactId>
+			<version>9.2.0</version>
+		</dependency>
 		<dependency>
 			<groupId>org.jetbrains.kotlin</groupId>
 			<artifactId>kotlin-reflect</artifactId>
