--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,7 @@ sp.redis.port=6379
 sp.redis-session-ttl-secs=60
 sp.redis-token-ttl-secs=300
 sp.email-verification-subject=Welcome to Skillspro
+sp.password-forgot-subject=Password reset
 
 sp.mongo.url=mongodb://localhost:27017
 sp.mongo.dbName=skillspro
