--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 server.port=7200
-#logging.level.org.springframework.security=debug
+#logging.level.org.springframework.security=trace
 logging.level.me.skillspro=debug
 
 sp.redis.host=localhost
 sp.redis.port=6379
-sp.redis-session-ttl-secs=60
+sp.redis-session-ttl-secs=500
 sp.redis-token-ttl-secs=300
 sp.email-verification-subject=Welcome to Skillspro
 sp.password-forgot-subject=Password reset
@@ -12,7 +12,12 @@ sp.password-forgot-subject=Password reset
 sp.mongo.url=mongodb://localhost:27017
 sp.mongo.dbName=skillspro
 
+sp.storage.service=file
+sp.application-url=http://localhost:7200
+
 spring.mail.host=smtp.elasticemail.com
 spring.mail.port=2525
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+
+spring.servlet.multipart.max-file-size=5MB
