--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,11 @@
 server.port=7200
 #logging.level.org.springframework.security=trace
+#logging.level.org.springframework.web=trace
 logging.level.me.skillspro=debug
 
 sp.redis.host=localhost
 sp.redis.port=6379
-sp.redis-session-ttl-secs=500
+sp.redis-session-ttl-secs=2000000
 sp.redis-token-ttl-secs=300
 sp.email-verification-subject=Welcome to Skillspro
 sp.password-forgot-subject=Password reset
@@ -13,7 +14,8 @@ sp.mongo.url=mongodb://localhost:27017
 sp.mongo.dbName=skillspro
 
 sp.storage.service=file
-sp.application-url=http://localhost:7200
+#sp.application-url=http://localhost:7200
+sp.application-url=https://smooth-phones-stay.loca.lt
 
 spring.mail.host=smtp.elasticemail.com
 spring.mail.port=2525
